--- a/css/styles.css
+++ b/css/styles.css
@@ -54,14 +54,27 @@ img {
   margin-right: auto;
   margin-left: auto;
 }
+.hover-focus:hover,
+.hover-focus:focus {
+  color: var(--hover-color);
+}
+.button-styles {
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  background: var(--hover-color);
+  color: var(--main-bg-color);
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.87;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.button-styles:hover,
+.button-styles:focus {
+  background: var(--make-an-order-hover-color);
+}
 /*Other links*/
-.navigation-links:hover {
-  color: var(--hover-color);
-}
-.navigation-links:focus {
-  color: var(--hover-color);
-}
-.navigation-links {
+.navigation__links {
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
@@ -93,15 +106,15 @@ img {
   border-bottom: 1px solid var(--header-border-color);
   display: flex;
 }
-.page-navigation {
+.navigation {
   display: flex;
 }
-.navigation-list {
+.navigation__list {
   display: flex;
   padding-left: 0px;
   align-items: center;
 }
-.logo-header {
+.logo {
   text-decoration: none;
   font-family: 'Raleway';
   font-weight: bold;
@@ -112,7 +125,7 @@ img {
   align-items: center;
   margin-right: 93px;
 }
-.web-logo {
+.logo__web-logo {
   color: var(--hover-color);
 }
 .phone-number {
@@ -130,13 +143,7 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.phone-number:hover {
-  color: var(--hover-color);
-}
-.phone-number:focus {
-  color: var(--hover-color);
-}
-.mail {
+.header-contacts__mail {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -150,10 +157,7 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mail:focus {
-  color: var(--hover-color);
-}
-.header-icon {
+.header-contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -163,16 +167,16 @@ img {
   margin-right: 215px;
   padding: 32px 0;
 }
-.navigation-list-item {
+.navigation__list-item {
   position: relative;
   list-style: none;
   margin-right: 50px;
 }
-.navigation-list-item:last-child {
+.navigation__list-item:last-child {
   margin-right: 0px;
 }
 /*Banner-Section*/
-.banner {
+.banner-section__heading {
   font-size: 44px;
   line-height: 1.36;
   font-weight: 900;
@@ -199,24 +203,15 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.make-an-order {
-  font-family: 'Roboto', sans-serif;
-  cursor: pointer;
-  background: var(--hover-color);
-  color: var(--main-bg-color);
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 1.87;
+.banner-section__button {
   display: flex;
   align-items: center;
-  border-radius: 4px;
   margin-right: auto;
   margin-left: auto;
   padding: 10px 32px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-.make-an-order:hover {
-  background: var(--make-an-order-hover-color);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*Main-section*/
 .main {
@@ -456,11 +451,6 @@ img {
   margin-top: 20px;
 }
 .logo-footer {
-  text-decoration: none;
-  font-family: 'Raleway', sans-serif;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.2;
   color: var(--main-bg-color);
 }
 .mail-footer,
@@ -836,22 +826,43 @@ img {
   border-radius: 4px;
   padding: 12px 16px;
 }
-.modal-checkbox-block {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
-  justify-content: center;
+.check__agreemnet-link {
+  color: var(--hover-color);
 }
-.hidden-checkox {
-  margin-right: 8px;
+.checkbox-block {
+  position: relative;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  white-space: nowrap;
+}
+.custom-checkbox {
   width: 16px;
   height: 15px;
+  margin-right: 8px;
+  display: inline-block;
 }
-.icon-check {
-  margin-right: 7px;
+.check__text {
+  display: inline-block;
 }
-.agreement-condition-link {
-  color: var(--hover-color);
+.checkbox {
+  position: absolute;
+  display: block;
+  border: 2px solid var(--h1-h2-h3-color);
+  width: 16px;
+  height: 15px;
+  border-radius: 4px;
+}
+.check {
+  display: flex;
+  align-items: center;
+}
+.check__icon-check {
+  position: absolute;
+  z-index: -1;
+}
+.check__input:checked + .custom-checkbox .check__icon-check {
+  z-index: 3;
 }
 .modal-button {
   background: var(--hover-color);
